# PCSC_data_approximation

./: CMakeLists.txt  README.md
data/: evaluation_example.txt  execution_example.txt  template_evaluate.txt  template_file.txt
doc/: Doxyfile
doc/html/: _barycentric_8cpp.html  _barycentric_8cpp__incl.map  _barycentric_8cpp__incl.md5  _barycentric_8h.html  _barycentric_8h__dep__incl.map  _barycentric_8h__dep__incl.md5  _barycentric_8h__incl.map  _barycentric_8h__incl.md5  _barycentric_8h_source.html  _data_handler_8cpp.html  _data_handler_8cpp__incl.map  _data_handler_8cpp__incl.md5  _data_handler_8h.html  _data_handler_8h__dep__incl.map  _data_handler_8h__dep__incl.md5  _data_handler_8h__incl.map  _data_handler_8h_source.html  _interpolation_8cpp.html  _interpolation_8cpp__incl.map  _interpolation_8cpp__incl.md5  _interpolation_8h.html  _interpolation_8h__dep__incl.map  _interpolation_8h__dep__incl.md5  _interpolation_8h__incl.map  _interpolation_8h__incl.md5  _interpolation_8h_source.html  _lagrange_8cpp.html  _lagrange_8cpp__incl.map  _lagrange_8cpp__incl.md5  _lagrange_8h.html  _lagrange_8h__dep__incl.map  _lagrange_8h__dep__incl.md5  _lagrange_8h__incl.map  _lagrange_8h__incl.md5  _lagrange_8h_source.html  _least_squares_8cpp.html  _least_squares_8cpp__incl.map  (+47 more)
documentation/: Doxyfile
src/: Barycentric.cpp  Barycentric.h  DataHandler.cpp  DataHandler.h  Interpolation.cpp  Interpolation.h  Lagrange.cpp  Lagrange.h  LeastSquares.cpp  LeastSquares.h  main.cpp
test/: test.cpp  wrong_data.txt  wrong_dimension.txt  wrong_header.txt  wrong_variables.txt
(+53 files in other folders)
